fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-212-2a8f7b4a99.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function ObjectFit() {
  return (
    <VStack p="10px">
      <Image h="500px" objectFit="contain" src="/images/image.png" />
    </VStack>
  )
}"
