fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-214-6dc49544c0.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Grid() {
  return (
    <Grid gap="10px" gridTemplateColumns="repeat(2, 1fr)" gridTemplateRows="repeat(2, 1fr)">
      <Box bg="#697F9F" h="100px" overflow="hidden" />
      <Box bg="#697F9F" h="100px" overflow="hidden" />
      <Box bg="#697F9F" h="100px" overflow="hidden" />
      <Box bg="#697F9F" h="100px" overflow="hidden" />
    </Grid>
  )
}"
