fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-215-39e86f8f53.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Grid() {
  return (
    <Grid gap="10px" gridTemplateColumns="repeat(2, 1fr)" gridTemplateRows="repeat(4, 1fr)">
      <Box
        bg="#697F9F"
        gridColumn="1 / span 1"
        gridRow="4 / span 1"
        h="100px"
        overflow="hidden"
      />
      <Box
        bg="#697F9F"
        gridColumn="2 / span 1"
        gridRow="3 / span 1"
        h="100px"
        overflow="hidden"
      />
    </Grid>
  )
}"
