fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-218-587666c709.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function MixBlendMode() {
  return <Image aspectRatio="1" mixBlendMode="overlay" src="/images/image.png" />
}"
