fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-219-c6446b7b2e.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function MixBlendMode() {
  return <Image aspectRatio="1" mixBlendMode="screen" src="/images/image.png" />
}"
