fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-220-5980153f26.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function MixBlendMode() {
  return <Image aspectRatio="1" mixBlendMode="multiply" src="/images/image.png" />
}"
