fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-221-d003bdb336.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function MixBlendMode() {
  return <Box bg="#D9D9D9" mixBlendMode="soft-light" />
}"
